<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_asistencia"
            android:icon="@drawable/ic_menu_asistencia"
            android:title="@string/menu_asistencia" />
        <item
            android:id="@+id/nav_alumno"
            android:icon="@drawable/ic_menu_alumno"
            android:title="@string/menu_alumno" />
        <item
            android:id="@+id/nav_grupo"
            android:icon="@drawable/ic_menu_grupo"
            android:title="@string/menu_grupo" />
        <item
            android:id="@+id/nav_grafico"
            android:icon="@drawable/ic_menu_grafico"
            android:title="@string/menu_grafico" />
    </group>
</menu>