<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_asistencia">

    <fragment
        android:id="@+id/nav_asistencia"
        android:name="com.example.proyecto_academiavolley.ui.asistencia.AsistenciaFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_asistencia" />

    <fragment
        android:id="@+id/nav_alumno"
        android:name="com.example.proyecto_academiavolley.ui.alumno.AlumnoFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_alumno" >
        <action
            android:id="@+id/action_nav_alumno_to_alumnoRegistrar"
            app:destination="@id/alumnoRegistrar" />
        <action
            android:id="@+id/action_nav_alumno_to_alumnoEditar"
            app:destination="@id/alumnoEditar" />
        <action
            android:id="@+id/action_nav_alumno_self"
            app:destination="@id/nav_alumno" />
    </fragment>

    <fragment
        android:id="@+id/nav_grupo"
        android:name="com.example.proyecto_academiavolley.ui.grupo.GrupoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_grupo" >
        <action
            android:id="@+id/action_nav_grupo_to_grupoRegistrar"
            app:destination="@id/grupoRegistrar" />
        <action
            android:id="@+id/action_nav_grupo_self"
            app:destination="@id/nav_grupo" />
        <action
            android:id="@+id/action_nav_grupo_to_grupoEditar"
            app:destination="@id/grupoEditar" />
    </fragment>
    <fragment
        android:id="@+id/alumnoRegistrar"
        android:name="com.example.proyecto_academiavolley.ui.alumno.AlumnoRegistrar"
        android:label="fragment_alumno_registrar"
        tools:layout="@layout/fragment_alumno_registrar" />
    <fragment
        android:id="@+id/alumnoEditar"
        android:name="com.example.proyecto_academiavolley.ui.alumno.AlumnoEditar"
        android:label="fragment_alumno_editar"
        tools:layout="@layout/fragment_alumno_editar" >
        <action
            android:id="@+id/action_alumnoEditar_to_nav_alumno"
            app:destination="@id/nav_alumno" />
    </fragment>
    <fragment
        android:id="@+id/grupoRegistrar"
        android:name="com.example.proyecto_academiavolley.ui.grupo.GrupoRegistrar"
        android:label="fragment_grupo_registrar"
        tools:layout="@layout/fragment_grupo_registrar" />
    <fragment
        android:id="@+id/grupoEditar"
        android:name="com.example.proyecto_academiavolley.ui.grupo.GrupoEditar"
        android:label="fragment_grupo_editar"
        tools:layout="@layout/fragment_grupo_editar" >
        <action
            android:id="@+id/action_grupoEditar_to_nav_grupo"
            app:destination="@id/nav_grupo" />
    </fragment>
</navigation>